[gd_scene load_steps=2 format=3 uid="uid://f744pwd2irmi"]

[ext_resource type="Script" path="res://Content/Scripts/Stage/stage_2_scenario.gd" id="1_8fnhc"]

[node name="stage_2_scenario" type="Node"]
script = ExtResource("1_8fnhc")

[node name="basicSpawner" type="Timer" parent="."]

[node name="waveSpawner" type="Timer" parent="."]

[connection signal="timeout" from="waveSpawner" to="." method="_on_wave_spawner_timeout"]
